# _smaug_

./: AUTHORS  Doxyfile.in  INSTALL.md  LICENSE  Makefile.am  README  README.md  TODO  autogen.sh  configure  configure.ac  smaug-2.0.pc.in
data/: README.md
data/area/: area.lst  boot.txt  help.are  ice-help.are  imc-help.are  manor.are  newgate.are  sewer.are
data/area/en/: chapel.are  dwarven.are  gods.are  help.are  limbo.are  limbo.are2  srefuge.are
data/area/es_ES/: astral.are  help.are
data/area/gl_ES/: haon.are  help.are
data/area/imc/: config
data/clans/: clan.lst  cleric.gui  druid.gui  mage.gui  thief.gui  warrior.gui
data/classes/: class.lst
data/color/: default  smaug
data/deity/: deity.lst  test.dty
data/gods/: Edmond
data/imc/: imc.config
data/races/: Deep-Gnome.race  Demon.race  Dwarf.race  Gnome.race  Half-Orc.race  Half-Troll.race  Sea-Elf.race  race.lst
data/system/: RETIREDLIST  WIZLIST  immortal.host  mudrip.rip  mudtitle.asc
data/web/: README.md  authors.html  downloads.html  index.html  licenses.html  muds.html  params.json  smaug_downloads.html  support.html  webclient.html  xsmaug.buttons.conf  xsmaug_authors.html  xsmaug_downloads.html  xsmaug_full.html  xsmaug_index.html  xsmaug_licenses.html  xsmaug_muds.html  xsmaug_support.html
data/web/css/: style.css
db/area/: Build.are  README.md  area.lst  dragonflightland.are  gods.are  help.are  map2.are  newdark.are  sesame.are
db/area/en/: bazaar.are  deathdun.are  gallery.are  grave.are  grove.are  help.are  limbo.are  map1.are  map3.are  midennir.are  newacad.are  pixie.are
db/area/es_ES/: daycare.are  export.are  gtown.are  redferne.are  unholy.are
db/area/gl_ES/: bazaar.are  help.are  limbo.are  map1.are  newacad.are  newdark.are  newgate.are  plains.are
db/clans/: augurer.gui  ranger.gui  vampire.gui
db/color/: AFK  default  smaug  smaugII
db/deity/: _lilith_.dty
db/imc/: imc.color  imcrumors.txt
db/maps/: Overland.gods  Overland.help  map1.are  map1.raw  map2.are  map2.raw  map3.are  map3.raw
db/races/: Drow.race  Elf.race  Gith.race  Half-Elf.race  Half-Ogre.race  Halfling.race  Human.race  Lizardman.race  Pixie.race  _Vampire_.race  race.lst
db/system/: mudrip.rip  mudtitle.ans  mudtitle.rip
db/system/es_ES/: skills.dat.new
db/system/gl_ES/: skills.dat.orig
doc/: Alias.help  Dragonflight.txt  FAQ.txt  Merc22MCCPMXP.patch  Object.help  Overland-RGB.txt  Overland.txt  README.md  SMAUGDOC  Undertaker2.txt  alias.txt  archery.txt  area.txt  arena.txt  bank.txt  bleeding.txt  class.txt  code.txt  command.txt  contrib.txt  doxygen_sqlite3.db  dragonflight.help  gettext.txt  gscbank.txt  hacker2.txt  i18n.txt  license.txt  money.txt  morgue.txt  mpx.diff  olc-mob.txt  olc-prog.txt  olc-resets.txt  olc-room.txt  olc.txt  olc2.txt  olc2addon.txt  overland-newcontinent.txt  overland.txt  pfile.txt  (+11 more)
doc/imc2/: CHANGELOG  Makefile.imc2  README  README.changes  README.circle  README.hub  README.info  revisions3g.txt
etc/: Makefile.am  README.md  httpd.conf  httpd.conf.in  smaugd.conf.in  wsproxy.conf  wsproxy.conf.in
etc/init.d/: Makefile.am  log  smaugd-httpd  smaugd-httpd.in  smaugd-wsproxy  smaugd-wsproxy.in  smaugd.in
man/: README.md  smaug.1  smaugd.1
po/: ChangeLog  LINGUAS  Makevars  Makevars.template  POTFILES.in  README.md  en@boldquot.po  en@quot.po  es.po  es_ES.po  gl.es  gl.po  gl_ES.po  smaug.pot
src/: Makefile.am  Makefile.orig  README.md  act_comm.c  act_info.c  act_move.c  act_obj.c  act_wiz.c  adminlist.c  alias.c  alias.h  archery.c  arena.c  ban.c  bank.c  bank.h  bet.h  boards.c  build.c  calendar.c  calendar.h  chess.c  chess.h  clans.c  color.c  color.h  colorize.c  comm.c  comments.c  const.c  db.c  deity.c  dice.c  dns.c  dns.h  dragonflight.c  dragonflight.h  fight.c  grub.c  handler.c  (+107 more)
tools/: README.md  c_files  cleansrc  count  cpp_files  file_header  file_header.c  file_header.in  grind  indent  lines  strace
www/: authors.html  downloads.html  genuine-facebook-login.html  index.html  introduction.html  license.html  licenses.html  muds.html  package-lock.json  package.json  play.html  playnow.html  smaug.buttons.conf  smaug.conf  smaug_authors.html  smaug_downloads.html  smaug_full.txt  smaug_index.html  smaug_introduction.html  smaug_license.html  smaug_muds.html  smaug_support.html  support.html
www/css/: app.css  playnow.css  style.css  styles-window.css  styles.css
www/icons/png/: Thumbs.db
www/icons/png/128x128/: Thumbs.db
www/icons/png/256x256/: Thumbs.db
www/icons/png/32x32/: Thumbs.db
www/icons/png/48x48/: Thumbs.db
www/icons/png/64x64/: Thumbs.db
www/icons/png/76x76/: Thumbs.db
www/icons/png/Templates/: Thumbs.db
www/js/: clock.js  embed.js  foundation.js  modernizr.js  open_url.js  windows.js
www/js/modules/: Config.js  Config.js.orig  ScrollView.js  Socket.js
www/old/: authors.html  downloads.html  index.old.html  license.html  muds.html  play.html  support.html  webclient.html
www/proxy/: chat.json  wsproxy.conf  wsproxy.js
